src/test/deca/context/invalid/provided/Erreur_decl.deca
//Resultats :
//Erreur contextuelle
//Ligne 5: non defined type
{
clash x = 2;
}